k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zapticket
  labels:
    name: zapticket
    environment: production
